[package]
name = "turtle-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
turtle-common = { path = "../turtle-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "turtle"
path = "src/main.rs"
